# midi-lang

./: .gitignore  README.md
compiler/: .ocp-indent  Analyze.ml  Ast.ml  Codemap.ml  Errors.ml  IR.ml  Ident.ml  Lexer.mll  Main.ml  Normalize.ml  Parser.mly  Pretty.ml  Scope.ml  Session.ml  msg  test1  test2
doc/: midi.md  ri.md
examples/: arp  context  example1  scope  test
new-compiler/: Cargo.toml
new-compiler/src/: ast.rs  ident.rs  ir.rs  main.rs  parser.lalrpop  pretty.rs  scope.rs  util.rs
runtime/: Cargo.toml
runtime/src/: bytecode.rs  engine.rs  handler.rs  interp.rs  main.rs  message.rs  node.rs  primitives.rs  runtime.rs
