[package]
name = "new-compiler"
version = "0.1.0"
authors = ["Naomi Nitel <naominitel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies.lalrpop]
version = "*"
features = [ "lexer" ]

[dependencies]
lalrpop-util = "*"
regex = "*"
